--- a/JavaScript/arraysAndObjects.css
+++ b/JavaScript/arraysAndObjects.css
@@ -21,3 +21,14 @@ h1{
   box-shadow: 0px 0px 13px 5px rgba(68,68,68,0.2);
   padding: 25px;
 }
+
+.content p {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 50px;
+}
+
+.content img{
+  display: block;
+  margin: auto;
+}
